--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -321,7 +321,7 @@ endpoints:
         name: due_date
         description: 'Must be a valid date. Must be a date after or equal to <code>today</code>.'
         required: false
-        example: '2051-07-30'
+        example: '2051-07-31'
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -341,7 +341,7 @@ endpoints:
       title: b
       description: 'Eius et animi quos velit et.'
       status: completed
-      due_date: '2051-07-30'
+      due_date: '2051-07-31'
       projectId: 16
     fileParameters: []
     responses: []
@@ -459,7 +459,7 @@ endpoints:
         name: status
         description: ''
         required: true
-        example: completed
+        example: in_progress
         type: string
         enumValues:
           - not_started
@@ -472,7 +472,7 @@ endpoints:
         name: due_date
         description: 'Must be a valid date. Must be a date after or equal to <code>today</code>.'
         required: false
-        example: '2051-07-30'
+        example: '2051-07-31'
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -491,8 +491,8 @@ endpoints:
     cleanBodyParameters:
       title: b
       description: 'Eius et animi quos velit et.'
-      status: completed
-      due_date: '2051-07-30'
+      status: in_progress
+      due_date: '2051-07-31'
       projectId: 16
     fileParameters: []
     responses: []
